# rena_1.0

./: ChangeLog  FAQ  Makefile.am  NEWS  README.md  configure.ac
data/: Makefile.am  io.github.rena_music_player.metainfo.xml.in  rena.1  rena.desktop.in
data/icons/128x128/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/64x64/: Makefile.am
data/icons/symbolic/: Makefile.am
data/src/win32/: Makefile.am
data/ui/: Makefile.am
debian/: changelog  control  copyright  rules  watch
debian/patches/: 0001-Remove-cdioincludesonlastfmplugin.patch  series
plugins/: Makefile.am  rena-plugin-macros.h
plugins/acoustid/: Makefile.am  acoustid.plugin  rena-acoustid-plugin.c
plugins/ampache/: Makefile.am  ampache.plugin  rena-ampache-plugin.c  rena-ampache-plugin.h
plugins/cdrom/: Makefile.am  cdrom.plugin  rena-cdrom-plugin.c  rena-cdrom-plugin.h
plugins/dlna/: Makefile.am  dlna.plugin  rena-dlna-plugin.c  rena-dlna-plugin.h
plugins/dlna-renderer/: dlna-renderer.plugin
plugins/keybinder/: Makefile.am  keybinder.plugin  rena-keybinder-plugin.c  rena-keybinder-plugin.h
plugins/koel/: Makefile.am  koel.plugin  rena-koel-plugin.c  rena-koel-plugin.h
plugins/lastfm/: Makefile.am  lastfm.plugin  rena-lastfm-menu.ui  rena-lastfm-plugin.c
plugins/mpris2/: Makefile.am  mpris2.plugin  rena-mpris2-plugin.c  rena-mpris2-plugin.h
plugins/mtp/: Makefile.am  mtp.plugin  rena-devices-mtp.c  rena-mtp-musicobject.c  rena-mtp-musicobject.h  rena-mtp-thread-data.c  rena-mtp-thread-data.h  rena-mtp-thread.c  rena-mtp-thread.h
plugins/notify/: Makefile.am  notify.plugin  rena-notify-plugin.c
plugins/removable-media/: Makefile.am  removable.plugin  rena-devices-removable.c
plugins/song-info/: Makefile.am  rena-song-info-cache.c  rena-song-info-cache.h  rena-song-info-dialog.c  rena-song-info-dialog.h  rena-song-info-pane.c  rena-song-info-pane.h  rena-song-info-plugin.c  rena-song-info-plugin.h  rena-song-info-thread-albumart.c  rena-song-info-thread-albumart.h  rena-song-info-thread-artistart.c  rena-song-info-thread-artistart.h  rena-song-info-thread-dialog.c  rena-song-info-thread-dialog.h  rena-song-info-thread-pane.c  rena-song-info-thread-pane.h  song-info.plugin
plugins/subsonic/: Makefile.am  rena-subsonic-api.c  rena-subsonic-api.h  rena-subsonic-plugin.c  rena-subsonic-plugin.h  rena-subsonic-preferences.c  rena-subsonic-preferences.h  subsonic.plugin
plugins/tunein/: Makefile.am  rena-tunein-plugin.c  tunein.plugin
plugins/visualizer/: Makefile.am  rena-visualizer-particle.c  rena-visualizer-particle.h  rena-visualizer-plugin.c  rena-visualizer-plugin.h  rena-visualizer.c  rena-visualizer.h  visualizer.plugin
po/: POTFILES.in  af.po  ar.po  ast.po  bg.po  bn_IN.po  bs.po  ca_ES.po  cs.po  da.po  de.po  el.po  eo.po  es.po  eu.po  fr.po  hu.po  id.po  it.po  ja.po  ko_KR.po  lt.po  nl.po  no.po  oc.po  pl.po  pt.po  pt_BR.po  rena.pot  ru.po  sk.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po
src/: Makefile  gtkcellrendererbubble.c  gtkcellrendererbubble.h  info-bar-import-music.c  librena.pc.in  main.c  rena-album-art.c  rena-album-art.h  rena-app-notification-container.c  rena-app-notification-container.h  rena-app-notification.c  rena-app-notification.h  rena-art-cache.c  rena-art-cache.h  rena-backend.c  rena-backend.h  rena-background-task-bar.c  rena-background-task-bar.h  rena-background-task-widget.c  rena-background-task-widget.h  rena-cmdline.c  rena-database-provider.c  rena-database-provider.h  rena-database.c  rena-database.h  rena-debug.c  rena-debug.h  rena-device-client.c  rena-device-client.h  rena-dnd.c  rena-dnd.h  rena-equalizer-dialog.c  rena-equalizer-dialog.h  rena-favorites.c  rena-favorites.h  rena-file-utils.c  rena-file-utils.h  rena-filter-dialog.c  rena-filter-dialog.h  rena-hig.c  (+63 more)
src/win32/: README  rena.rc  win32dep.c  win32dep.h
